fixed: aside was being overlapped

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -42,5 +42,6 @@ aside {
   -o-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
+  z-index: 1000
 }
 
